# cppLanguageFeatures

./: CMakeLists.txt  LICENSE  README.md  main.cpp
auto/: AutoTest.h  auto_test.h
byte_and_bitset/: bitset_example.h  byte_example.h
constexpr/: compile_time_if.h  const_expr_example.h
construction/: BasicObjectConstruction.h  basic_object_construction.h
containers/: array_example.h  deque.h  forwardlist.h  list_example.h  map_example.h  multimap.h  multiset.h  priorityqueue_example.h  set_range.h  set_with_custom_hash_and_equals.h  unordmultimap.h  vector.h
enum/: BuildingEnum.h  Readme.md  building_enum.h
exceptions/: Exception.cpp  Exception.h  exception.cpp  uncaught_exception.h
file_system/: stream_redirect_example.h
inline/: inline.cpp  inline.h
iterators/: backinserter_example.h  distance_example.h  frontinserter_example.h  inserter_example.h  iterswap_example.h  ostream_iterator_example.h  reverse_iterator_example.h
lambda/: lamda_example.h
lang_features/: copy_epsilon_mandatory_for_temporaries.h  override_example.h  std_any_example.h  using_example.h  using_example_two.h
move/: MoveOnStrings.h  NoExceptExample.h  PerfectForwarding.h  PerformanceTimings.h  ReturnValue.h  TemplateConcepts.h  move_on_strings.h  no_except_example.h  perfect_forwarding.h  performance_timings.h  return_value.h  template_concepts.h
namespace/: SampleNameSpace.h  SampleNamespace.cpp  sample_namespace.cpp  sample_namespace.h
optional/: OptionalMember.h  optional.h
pointers/: prefer_make_unique_and_shared.h  shared_ptr.h  unique_ptr.h  weak_ptr.h
stl/: print.h  (+7 more)
(+92 files in other folders)
